docs: fix update doc
